<resources>
    <string name="app_name">Jogger</string>
    <string name="chart_description">Chart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="distance_coved_text">Distance Covered</string>
    <string name="change">Change</string>
    <string name="no_thanks">No thanks</string>
    <string name="distance">Distance:</string>
    <string name="ok">Ok</string>
    <string name="permission_denied">Permission has been denied.Cannot continue the operation</string>
    <string name="permission_denied_title">Permission denied</string>
    <string name="access_permission">Access Permission:</string>
    <string name="location_messgae">Location access is required as the application calculated jogged distance using location.If the permission is denied the app wont be able to function.Do you want to change the permission</string>
    <string name="external_storage_messgae">External Storage access is required as the application to save screen shot in order to share achievement.If the permission is denied the app wont be able to function.Do you want to change the permission</string>
    <string name="total_distance">Total Distance</string>
    <string name="temp">Temperature</string>
    <string name="degree">&#160; \u2103</string>
    <string name="max">Max</string>
    <string name="error_name">Please enter a valid name</string>
    <string name="avg_speed_text">Avg Speed</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="date">date and time</string>
    <string name="humidity">Humidity</string>
    <string name="elapsed_time_counter">Elapsed time counter</string>

    <string name="time">time</string>
    <string name="elapsed_time_text">Elapsed Time</string>

    <string name="title_activity_user_info">UserInfo</string>
    <string name="name">Name</string>
    <string name="units_hint">Select Preferred Unit</string>
    <string name="save">Save</string>
    <string name="share_preparing">Preparing screen shot</string>
    <string name="km">km</string>
    <string name="mile">mile</string>
    <string name="start">Start</string>
    <string name="start_time">Start Time</string>
    <string name="stop">Stop</string>
    <string name="time_taken">Time Taken</string>
    <string name="avg_altitude">Avg altitude</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="no_history">No Jogging Data Yet</string>
    <string name="share_intent">Share Jogger Acheviement</string>
    <string name="share">Share</string>
    <string name="share_failed">Failed to share</string>
    <string name="not_available">Not Available</string>
    <string name="history_description">Joggers History</string>
    <string name="about_us">\nThis is an application for Udacity Nanodegree course.This application cannot be used for commerial use.To use any part of the application please contact the author of the application\n\nAuthor\nAbhimaan Madhav</string>
    <string name="copright">\u00A9Abhimaan</string>
    <string name="hint_weekly_goal">Define your Weekly Goal</string>
    <string-array name="units">
        <item>@string/km</item>
        <item>@string/mile</item>
    </string-array>
    <string name="title_activity_jogging_details">Map</string>
    <string name="appwidget_text">Avg distance jogged for past 7 days is:</string>
    <string name="add_widget">Add widget</string>
</resources>
